chore: update docker config